Changed: SDL upgraded to SDL2

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -29,7 +29,7 @@ EXTRA_DIST=$(DOS_FILES)
 # SDL build
 
 sopwith_SOURCES = $(COMMON_SOURCES) vid_vga.c
-sopwith_LDADD = sdl/libsdlsopwith.a @SDL_LIBS@
+sopwith_LDADD = sdl/libsdlsopwith.a @SDL2_LIBS@
 
 # Gtk+ build
 
