--- a/src/sdl/Makefile.am
+++ b/src/sdl/Makefile.am
@@ -1,6 +1,6 @@
-AM_CFLAGS=@CFLAGS@ @SDL2_CFLAGS@ -I..
+AM_CXXFLAGS=@CXXFLAGS@ @SDL2_CFLAGS@ -I..
 
 noinst_LIBRARIES = libsdlsopwith.a
 
-libsdlsopwith_a_SOURCES = video.c pcsound.c timer.c main.c
+libsdlsopwith_a_SOURCES = video.cpp pcsound.cpp timer.cpp main.cpp
 
